syntax = 'proto3';

package user;

service UserService {
    rpc CreateUser (CreateUserDto) returns (User);
    rpc FindUserById (FindUserByIdDto) returns (User);
    rpc FindUserByEmail (FindUserByEmailDto) returns (User);
}

message FindUserByIdDto {
    string id = 1;
}

message FindUserByEmailDto {
    string email = 1;
}

message CreateUserDto {
    string name = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message User {
    string id = 1;
    string name = 2;
    string lastName = 3;
    string email = 4;
    string password = 5;
}